name:			llvm-bindings
version:		3.2.1.1
license:		BSD3
synopsis:		LLVM Bindings for Haskell
description:
  A simple LLVM bindings library for Haskell.  The modules in
  LLVM.FFI.* Contain raw FFI bindings, while those in LLVM.* contain
  more Haskell-friendly versions.  The Control.Monad.LLVM.* modules
  contain monads which encapsulate some of the more ubiquitous state
  objects (ContextRef, ModuleRef, and BuilderRef) in a Reader monad.

  Bindings are created against the LLVM C bindings library, and follow
  the llvm library's major version updates.  The LLVM C bindings
  library "lazily" adds bindings as requested; therefore, if a
  particular function is desired for this library, it should be
  requested of the LLVM maintainers first, then added to this library.

  Version major and minor numbers track the primary LLVM release
  targeted by the library.  Backwards compatibility against previous
  LLVM versions depends primarily on whether or not LLVM itself
  guarantees such compatibility.

  At present, this library focuses on providing an interface to LLVM
  as a compiler backend.  The disassembly and object file, link-time
  optimization, and the execution engine C APIs are not supported at
  this time.

  This library tends not to behave well in ghci, due to improper
  handling of C++ linking cruft.  However, it should work fine when
  compiled into a program.
author:			Eric McCorkle
maintainer:		Eric McCorkle <emc2@metricspace.net>
stability:		Alpha
category:		Compilers/Interpreters, Code Generation
build-type:		Custom
cabal-version:		>= 1.2

extra-tmp-files:
    autom4te.cache
    config.log
    config.status
    llvm-bindings.buildinfo

extra-source-files:
    configure.ac
    configure
    llvm-bindings.buildinfo.in

library
  build-depends:	base, mtl
  build-tools:		hsc2hs
  exposed-modules:
    Control.Monad.LLVM.LLVMBuilder
    Control.Monad.LLVM.LLVMBuilder.Class
    Control.Monad.LLVM.LLVMContext
    Control.Monad.LLVM.LLVMContext.Class
    Control.Monad.LLVM.LLVMModule
    Control.Monad.LLVM.LLVMModule.Class
    LLVM.Analysis
    LLVM.BitReader
    LLVM.BitWriter
    LLVM.Core
    LLVM.DebugInfo
    LLVM.Initialization
    LLVM.Target
    LLVM.Transforms.Scalar
    LLVM.Transforms.IPO
    LLVM.Transforms.Vectorize
    LLVM.FFI.Analysis
    LLVM.FFI.BitReader
    LLVM.FFI.BitWriter
    LLVM.FFI.Core
    LLVM.FFI.Initialization
    LLVM.FFI.Target
    LLVM.FFI.Transforms.Scalar
    LLVM.FFI.Transforms.IPO
    LLVM.FFI.Transforms.Vectorize
  other-modules:
    Data.Dwarf

source-repository head
  type: git
  location: git://github.com/emc2/llvm-bindings.git
